# mdwf_db

./: .gitignore  AGENTS.md  Dockerfile  README.md  discover_ensembles.py  mdwf_db.py  mdwf_db_tutorial.aux  mdwf_db_tutorial.out  mdwf_db_tutorial.tex  mdwf_db_tutorial.toc  mdwf_ensembles.db  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_all_cli.sh  test_enhanced_error_handling.sh  test_promote.db  test_promote.db-shm
.cursor/plans/: config_list_storage.plan.md  fix-bugs-c2d8173e.plan.md  (+1 more)
.tmp_cli_test/: test.db
MDWFutils/: __init__.py  config.py  db.py  exceptions.py
MDWFutils.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
MDWFutils_old_backup/: __init__.py  config.py
__tmp_hmc_test/: mdwf_ensembles.db
config/: .gitignore  admin.env.template  readonly.env.template
docker/: Dockerfile  README.md
docs/: remote_perlmutter.md
scripts/: migrate_sqlite_to_mongo.py
test/: .gitignore  FIXES_APPLIED.md  README.md  test_mongodb_cli.sh
test_run/: DWF_mres.in  HMCparameters.xml  hmc_cpu.sh  hmc_gpu.sh  meson2pt.sh  mres.sh  mres_mq.sh  smear.sh  wflow.sh  zv.sh
tests/: README.md  conftest.py  test_builders.py  test_cli_command.py  test_cli_components.py  test_cli_help.py  test_cli_main.py  test_defaults_v2.py  test_exceptions.py  test_hmc_helpers.py  test_ingest.py  test_introspect.py  test_jobs_meson2pt.py  test_jobs_registry.py  test_jobs_schema.py  test_jobs_utils.py  test_jobs_wit.py  test_parsers_gauge_obs.py  test_remote.py  test_scanners.py  test_schemas_validators.py  test_templates.py  test_writers.py
(+192 files in other folders)
